--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <title>TimelineCrud</title>
   <base href="/timelinecrud/">
+  <!-- <base href="/"> -->
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
